fixing styling on mobile safari on button

--- a/css/index.css
+++ b/css/index.css
@@ -595,6 +595,12 @@ input[type=submit] {
 
 input[type=submit] {
   padding: 0.7%; }
+  @media screen and (max-width: 850px) {
+    input[type=submit] {
+      width: 19%; } }
+  @media screen and (max-width: 500px) {
+    input[type=submit] {
+      padding: 1.5%; } }
 
 .locationBtn {
   width: 15%; }
